# MCP-A2A-Weather-Agent

./: ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAM_PRESENTATION.md  OBSERVABILITY_VERIFICATION.md  PRODUCTION_ARCHITECTURE.md  Project_Overview.md  Project_Summary_Card.md  README.md  TESTING_GUIDE.md  Weather_streamlit_app.py  diagnose_mcp.py  main.py  pyproject.toml  requirements.txt  test_callback.py  test_observability_working.py  test_stream.py  test_stream_events.py
Project doc/: MCP Details.txt  Session_Summary_and_Issues.md
Weather result/: a2a_idempotency.db
server/: a2a_protocol.py  client.py  observability.py  resilience.py  security.py  weather.json  weather.py
tests/: test_a2a_protocol.py  test_observability.py  test_protocol_contracts.py  test_resilience.py  test_security.py
