[project]
name = "mcpcrashcourse"
version = "0.1.0"
description = "Sohan Patil"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.7",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.32.0",
    "streamlit-mic-recorder>=0.0.4",
    "SpeechRecognition>=3.10.0",
]
